# lofi

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
app/: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  deploy.sh  docker-entrypoint.sh  pyproject.toml  pytest.ini
app/.github/workflows/: ci.yml
app/data/: lucy_system_prompt.md
app/data/canon/: adroll_global_ad_performance_benchmarks_2024.json  akamai_state_of_online_retail_performance_2017.json  ana_programmatic_transparency_2023.json  analytic_partners_brand_marketing_drives_sales.json  analytic_partners_roi_genome_crisis_beyond.json  arf_how_advertising_works_today.json  arf_media_scheduling_continuity_vs_flighting.json  bcg_four_legged_measurement_2024.json  bcg_six_steps_effective_measurement_2025.json  bcg_smarter_spending_2025.json  cxl_multivariate_tests.json  dv360_reference_table_3187025.json  emplifi_social_media_ad_benchmarks_2024.json  facebook_geolift_intro.json  facebook_learning_phase.json  forrester_budget_planning_guides_2025.json  ftc_endorsement_guides_2023.json  ftc_endorsements_influencers_reviews.json  garm_brand_safety_suitability.json  geo_experiments_google_whitepaper.json  google_abcds_creative_framework.json  google_ads_data_discrepancies.json  google_ads_enhanced_conversions.json  google_ads_help_ids_generic.json  google_ads_learning_phase.json  hbr_discovery_driven_planning.json  hbr_how_to_market_in_a_downturn_2009.json  hbs_8153_generic.json  hbs_how_to_measure_marketing_effectiveness.json  heybooster_out_of_stock_google_ads.json  iab_ad_effectiveness_best_practices_2015.json  iab_ads_txt.json  iab_cross_media_ad_effectiveness_2017.json  iab_dooh_instore_retail_media_playbook_2024.json  iab_europe_digital_ad_effectiveness_whitepaper.json  iab_internet_ad_revenue_2024.json  iab_retail_media_measurement_2024.json  iab_sellers_json.json  iab_state_of_data_2024.json  iab_techlab_content_taxonomy.json  (+55 more)
app/docs/: README.md
app/lucy/: app.py
app/scripts/: install_zyte_cert.py
app/terraform/: app_runner.tf  aws-mfa-session.sh  main.tf  outputs.tf  pipeline_s3.tf  variables.tf
app/tests/: conftest.py  test_bootstrap.py  test_import_safety.py  test_scaffold_imports.py
(+190 files in other folders)
