[project]
name = "lofi"
version = "0.1.0"
description = "Lofi Campaign Planner - multi-agent campaign planning workflow"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2",
    "boto3>=1.34",
    "supabase>=2.6",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
