[project]
name = "lucy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.27.0",
    "loguru>=0.7.3",
    "openai>=1.99.9",
    "pydantic>=2.11.7",
    "pydantic-ai==1.63.0",
    "pyjwt>=2.10.1",
    "python-jose>=3.5.0",
    "supabase>=2.7.4",
    "fastembed>=0.3.0",
    "numpy>=1.24.0",
    "fastapi-pagination>=0.12.27",
    "pytrends>=4.9.2",
    "python-docx>=1.2.0",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "pymupdf>=1.27.1",
    "tabulate>=0.10.0",
    # Optional provider packages — install only the ones you need.
    # pydantic-ai will use the appropriate client based on the model prefix:
    #   anthropic:*     -> pip install anthropic
    #   google-gla:*    -> pip install google-generativeai
    "anthropic>=0.84.0",
    # "google-generativeai>=0.8.0",
    "griffe>=1,<2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "jupyter>=1.1.1",
    "pre-commit>=4.3.0",
    "python-dotenv>=1.1.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-watch>=4.2.0",
    "pytest-xdist>=3.6.1",
]
